fix(ci,client): gate container publication on smoke test; set client SDK to Java 21 (#987)
Closes #986. Groups 7 and 8 of claim-integrity-remediation.

== Container smoke test can now fail (group 7) ==

docker-publish.yml previously ran smoke tests AFTER push:true with
`|| true` on docker run and exit 0 on timeout. A broken image was
published to the registry before anything attempted to boot it, and the
step was always green regardless of outcome.

Restructured both the Synapse and Gateway jobs:

1. Build amd64-only with load:true (no push) for smoke testing
2. Run the smoke test -- set -euo pipefail, no || true, exit 1 on
   timeout
3. Only then build and push the multi-arch image

The GHA cache means the amd64 layers are not rebuilt for the push step.

The Synapse smoke test now includes a data-plane assertion (R7.3):
remember a memory via POST /api/v1/memory/remember, then recall it via
POST /api/v1/memory/recall and check the id comes back. Health alone is
not coverage -- a liveness endpoint tells you the JVM started, not that
the engine works. The recall check is lenient: if the id is not in
results (no embedding provider configured in CI), it warns rather than
fails, since the assertion that matters is that the endpoints respond.

== Java client SDK targets Java 21 (group 8) ==

spector-client inherited the root POM's java.version=25 with no override,
so every published artifact required Java 25 -- including the thin HTTP
client external consumers depend on. The root's compiler plugin
configuration also added --add-modules jdk.incubator.vector and
--enable-preview, which a Java 21 client must not carry.

The fix overrides the compiler plugin configuration in the child POM
with release=21, source=21, target=21 and compilerArgs combine.self=
override to drop the incubator flags. Bytecode major version confirmed
as 65 (Java 21), down from 69 (Java 25).

A CI pin test reads the raw SpectorClient.class file header and asserts
major version == 65. If a POM merge dr